--- a/scss/files/_theme.scss
+++ b/scss/files/_theme.scss
@@ -859,7 +859,7 @@ footer.top .footer-top-content ul {
 }
 
 footer.bottom {
-  display: none;
+  visibility: hidden;
   padding: 10px 0 20px;
 }
 
